# cpp_basic_exercises

./: .gitignore
modern_cpp/: hello_world.cpp
modern_cpp/grep/: grep.cpp  grep.md  grep2.cpp  readme.md
modern_cpp/laberinto/: main.cpp
schaum_book/ch10/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch11_memoria_dinamica/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch13_oop/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch2/: CMakeLists.txt  Makefile  main.cpp  make.bat  notes.md  run.bat  utils.cpp  utils.h
schaum_book/ch3/: CMakeLists.txt  Makefile  main.cpp  utils.cpp  utils.h
schaum_book/ch4/: CMakeLists.txt  Makefile  main.cpp  utils.cpp  utils.h
schaum_book/ch5/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch6/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch7/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch8/: CMakeLists.txt  Makefile  main.cpp
schaum_book/ch9/: CMakeLists.txt  Makefile  main.cpp
